// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test switch color and size 1`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 18px; width: 30px;\\">
    <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 10.799999999999999px; width: 28px; border-radius: 10px; background-color: indigo;\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: 7.5px; color: indigo; width: 30px; height: 30px;\\">
      <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 15px; height: 15px; background-color: indigo;\\">
        <!---->
      </div>
    </div>
  </div>
  <transition-stub name=\\"var-form-details\\">
    <!---->
  </transition-stub>
</div>"
`;

exports[`test switch color and size 2`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 18px; width: 30px;\\">
    <div class=\\"var-switch__track\\" style=\\"height: 10.799999999999999px; width: 28px; border-radius: 10px; background-color: rgb(137, 221, 255);\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: -7.5px; color: rgb(137, 221, 255); width: 30px; height: 30px;\\">
      <div class=\\"var-switch__handle var-elevation--2\\" style=\\"width: 15px; height: 15px; background-color: rgb(137, 221, 255);\\">
        <!---->
      </div>
    </div>
  </div>
  <transition-stub name=\\"var-form-details\\">
    <!---->
  </transition-stub>
</div>"
`;

exports[`test switch example 1`] = `
"<div class=\\"var-switch-outer\\">
  <div class=\\"app-type\\">基本使用</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px;\\">
            <!---->
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
  </div>
  <div class=\\"app-type\\">不可用</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block var-switch__disable\\" style=\\"height: 24px; width: 40px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px;\\">
            <!---->
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px;\\">
            <!---->
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
  </div>
  <div class=\\"app-type\\">自定义颜色</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px;\\">
            <!---->
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px; background-color: rgb(255, 159, 0);\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; color: rgb(255, 159, 0); width: 40px; height: 40px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px; background-color: rgb(255, 159, 0);\\">
            <!---->
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
  </div>
  <div class=\\"app-type\\">不同大小</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 18px; width: 30px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 10.799999999999999px; width: 28px; border-radius: 10px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 7.5px; width: 30px; height: 30px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 15px; height: 15px;\\">
            <!---->
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px;\\">
            <!---->
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 30px; width: 50px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 18px; width: 48px; border-radius: 16.666666666666668px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 12.5px; width: 50px; height: 50px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 25px; height: 25px;\\">
            <!---->
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
  </div>
  <div class=\\"app-type\\">加载状态</div>
  <div class=\\"var-switch__example-block\\">
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px;\\">
            <div class=\\"var-loading\\">
              <!---->
              <div class=\\"var--box var-loading__body\\">
                <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 16px; height: 16px; color: currentColor;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
    <div class=\\"var-switch\\">
      <div class=\\"var-switch-block\\" style=\\"height: 30px; width: 50px;\\">
        <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 18px; width: 48px; border-radius: 16.666666666666668px;\\"></div>
        <div class=\\"var-switch__ripple\\" style=\\"left: 12.5px; width: 50px; height: 50px;\\">
          <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 25px; height: 25px; color: rgb(255, 159, 0);\\">
            <div class=\\"var-loading\\">
              <!---->
              <div class=\\"var--box var-loading__body\\">
                <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 21px; height: 21px; color: currentColor;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
                <!---->
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <transition-stub name=\\"var-form-details\\">
        <!---->
      </transition-stub>
    </div>
  </div>
  <div class=\\"app-type\\">值的校验</div>
  <div class=\\"var-switch\\">
    <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
      <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
      <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
        <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px;\\">
          <!---->
        </div>
      </div>
    </div>
    <transition-stub name=\\"var-form-details\\">
      <!---->
    </transition-stub>
  </div>
</div>"
`;

exports[`test switch loading prop 1`] = `
"<div class=\\"var-switch\\" modelvalue=\\"true\\">
  <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
    <div class=\\"var-switch__track\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: -10px; color: rgb(153, 153, 153); width: 40px; height: 40px;\\">
      <div class=\\"var-switch__handle var-elevation--2\\" style=\\"width: 20px; height: 20px; color: rgb(255, 152, 0);\\">
        <div class=\\"var-loading\\">
          <!---->
          <div class=\\"var--box var-loading__body\\">
            <div class=\\"var-loading__circle\\"><span class=\\"var-loading__circle-block\\" style=\\"width: 16px; height: 16px; color: currentColor;\\"><svg viewBox=\\"25 25 50 50\\"><circle cx=\\"50\\" cy=\\"50\\" r=\\"20\\" fill=\\"none\\"></circle></svg></span></div>
            <!---->
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
  <transition-stub name=\\"var-form-details\\">
    <!---->
  </transition-stub>
</div>"
`;

exports[`test switch rules prop 1`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
    <div class=\\"var-switch__track var-switch__track-active\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: 10px; width: 40px; height: 40px;\\">
      <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-active\\" style=\\"width: 20px; height: 20px;\\">
        <!---->
      </div>
    </div>
  </div>
  <transition-stub name=\\"var-form-details\\">
    <!---->
  </transition-stub>
</div>"
`;

exports[`test switch rules prop 2`] = `
"<div class=\\"var-switch\\">
  <div class=\\"var-switch-block\\" style=\\"height: 24px; width: 40px;\\">
    <div class=\\"var-switch__track var-switch__track-error\\" style=\\"height: 14.399999999999999px; width: 38px; border-radius: 13.333333333333334px;\\"></div>
    <div class=\\"var-switch__ripple\\" style=\\"left: -10px; width: 40px; height: 40px; color: rgb(153, 153, 153);\\">
      <div class=\\"var-switch__handle var-elevation--2 var-switch__handle-error\\" style=\\"width: 20px; height: 20px;\\">
        <!---->
      </div>
    </div>
  </div>
  <transition-stub name=\\"var-form-details\\">
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\">错误！</div>
      <div class=\\"var-form-details__length\\"></div>
    </div>
  </transition-stub>
</div>"
`;
